fixed project height on firefox

--- a/public/src/vue/style.less
+++ b/public/src/vue/style.less
@@ -835,8 +835,8 @@ body {
       flex: 1 1 auto;
     }
     .m_project {
-      height: 100%;
-      min-height: 100%;
+      // height: 100%;
+      // min-height: 100%;
     }
   
   }
